# topo_reader

./: README.md
FlexArray/: BSD_LICENCE.txt  CMakeLists.txt
FlexArray/config/: FlexArrayConfig.cmake
FlexArray/doc/: FlexArray_Dox
FlexArray/src/: Array.h  ArrayIO.h  ArrayLocks.cpp  ArrayLocks.h  AtomicLock.h  AtomicValue.cpp  AtomicValue.h  BlockedArray.h  CMakeLists.txt  ExtendableArray.h  IDXArray.h  MappedArray.h  MappedElement.h  OOCArray.h  SharedArray.h  SharedBlockedArray.h
FlexArray/test/: CMakeLists.txt  test_array_locks.cpp  test_idx_array.cpp
Statistics/: CMakeLists.txt
Statistics/config/: StatisticsConfig.cmake
Statistics/data/: H_control_none.list
Statistics/doc/: FamilyProcessing.tex  vgtc.cls
Statistics/gui/: CMakeLists.txt  DisplayTools.cpp  DisplayTools.h  GUIDriver.cpp  GUIDriver.h  flexgui.py  plotMain.cpp  plotViewerUI.cpp  plotViewerUI.fl  plotViewerUI.h  plotWindow.cpp  plotWindow.h  sample_flexgui_in.txt  sample_flexgui_out.txt
Statistics/python/: CMakeLists.txt  __init__.py  setup.py  talassDB.i  test.py  typemaps.i
Statistics/src/: Accessor.cpp  Accessor.h  Aggregator.h  AggregatorFactory.cpp  AggregatorFactory.h  Attribute.cpp  Attribute.h  AttributeVariableList.cpp  AttributeVariableList.h  CMakeLists.txt  Covariance.cpp  Covariance.h  Covariance_J9.cpp  Covariance_J9.h  Engine.cpp  Engine.h  FamilyAggregator.cpp  FamilyAggregator.h  FeatureFamilyData.cpp  FeatureFamilyData.h  FunctionKurtosis.cpp  FunctionKurtosis.h  FunctionSkewness.cpp  FunctionSkewness.h  FunctionVariance.cpp  FunctionVariance.h  IntegratedFunctionValue.cpp  IntegratedFunctionValue.h  MaximalFunctionValue.cpp  MaximalFunctionValue.h  Mean.cpp  Mean.h  MeanDistance.h  MinimalFunctionValue.cpp  MinimalFunctionValue.h  PeriodicMean.cpp  PeriodicMean.h  PeriodicTransformation.cpp  PeriodicTransformation.h  Plot.cpp  (+14 more)
Statistics/utilities/: CMakeLists.txt  add_area.cpp  add_bbox_volume.cpp  add_boundary_metric.cpp  add_center_dist.cpp  add_circumference.cpp  add_confidence_hierarchy.cpp  add_derived_attribute.cpp  add_derived_metric.cpp  add_derived_metric_vtk.cpp  add_mean_position.cpp  add_metrics.py  apply.py  apply_to_list.py  apply_to_seg.py  attribute_by_parameter.cpp  batchExplorer.cpp  buildTestTree.cpp  build_transformed_volume.cpp  cmdLineProcessing.cpp  dump_by_parameter.cpp  dump_cdf_at_parameter.cpp  dump_feature_count.cpp  dump_mean_by_parameter.cpp  dump_values_at_parameter.cpp  extract_largest_component.cpp  process_statistics.cpp  testCovariance.cpp  xls_statistics.py
StreamingTopology/: CMakeLists.txt
StreamingTopology/Distributed/: Algorithm.cpp  Algorithm.h  Box.h  CMakeLists.txt  ControlFlow.h  DistributedDefinitions.h  FiFoBuffer.cpp  FiFoBuffer.h  GatherAlgorithm.cpp  GatherAlgorithm.h  IndexMap.h  LocalComputeAlgorithm.cpp  LocalComputeAlgorithm.h  MergeTree.cpp  MergeTree.h  ModuloFlow.cpp  ModuloFlow.h  ModuloGather.cpp  ModuloGather.h  ModuloScatter.cpp  ModuloScatter.h  Neighborhood.h  Patch.h  PatchAlgorithm.cpp  PatchAlgorithm.h  PointIndex.cpp  PointIndex.h  ScatterAlgorithm.cpp  ScatterAlgorithm.h  Segmentation.h  SegmentedMergeTree.h  SegmentedUnionTree.h  SerialCommunicator.cpp  SerialCommunicator.h  SerialControl.cpp  SerialControl.h  SerialInputStream.cpp  SerialInputStream.h  SerialOutputStream.cpp  SerialOutputStream.h  (+13 more)
StreamingTopology/config/: STConfig.cmake
StreamingTopology/data/: 4saddle.smf  6saddle.smf  8saddle.smf  blob_10_10_10.raw  blob_50_50_50.raw  sin_20_20.bof  sin_20_20.grid
StreamingTopology/doc/: AlgorithmNotes.tex  Distributed.dox  MergingAlgorithm.tex  StreamingTopology  StreamingTopology.dox
StreamingTopology/mscomplex/: AnalyticFunctions.h  AssemblyInterface.h  CMakeLists.txt  ComplexAssembly.cpp  ComplexAssembly.h  EdgeConstructor.cpp  EdgeConstructor.h  EmbeddedVertex.cpp  EmbeddedVertex.h  GradientComplex.cpp  GradientComplex.h  GradientComplexInterface.h  GradientInfo.cpp  GradientInfo.h  Graph.cpp  Graph.h  GraphNode.cpp  GraphNode.h  Grids.h  HierarchicalMorseComplex.cpp  HierarchicalMorseComplex.h  MCAssembly.cpp  MCAssembly.h  MCVertex.cpp  MCVertex.h  MSCAssembly.cpp  MSCAssembly.h  MSCVertex.cpp  MSCVertex.h  MorseComplex.cpp  MorseComplex.h  MorseComplexInterface.h  MorseNode.h  SlopeComplex.cpp  SlopeComplex.h  Slopes.cpp  Slopes.h  StableComplexAssembly.cpp  StableComplexAssembly.h  ThreadedGradientComplex.cpp  (+5 more)
StreamingTopology/parallel/: AddressHandler.h  Block2Stream.cpp  Block2Stream.h  CMakeLists.txt  block_to_stream.cpp  build_threaded_tree.cpp
StreamingTopology/parser/: BinaryParser.cpp  BinaryParser.h  CMakeLists.txt  CompactBinaryParser.cpp  CompactBinaryParser.h  CompactDistributedBinaryParser.cpp  CompactDistributedBinaryParser.h  DistributedBinaryParser.cpp  DistributedBinaryParser.h  GenericData.cpp  GenericData.h  GridEdgeParser.cpp  GridEdgeParser.h  GridParser.cpp  GridParser.h  HDF5GridParser.cpp  HDF5GridParser.h  HDF5GridParser_Dummy.cpp  HDF5GridParser_Dummy.h  IDXParser.cpp  IDXParser.h  ImplicitGridEdgeParser.cpp  ImplicitGridEdgeParser.h  ImplicitGridParser.cpp  ImplicitGridParser.h  ImplicitPMS2DParser.cpp  ImplicitPMS2DParser.h  ImplicitPeriodicGridParser.cpp  ImplicitPeriodicGridParser.h  PMS2DParser.cpp  PMS2DParser.h  Parser.cpp  Parser.h  PeriodicGridEdgeParser.cpp  PeriodicGridEdgeParser.h  PeriodicGridParser.cpp  PeriodicGridParser.h  SMAParser.cpp  SMAParser.h  SMBParser.cpp  (+7 more)
StreamingTopology/src/: AcceleratedMergeTree.h  AcceleratedSegMergeTree.cpp  AcceleratedSegMergeTree.h  AcceleratedSegSplitTree.cpp  AcceleratedSegSplitTree.h  AcceleratedSegUnionAlgorithm.cpp  AcceleratedSegUnionAlgorithm.h  AcceleratedSplitTree.h  AcceleratedUnionAlgorithm.cpp  AcceleratedUnionAlgorithm.h  ArcMetrics.h  ArraySegmentation.cpp  ArraySegmentation.h  BlockDecomposition.cpp  BlockDecomposition.h  BoundaryMarker.cpp  BoundaryMarker.h  BranchInfo.h  CMakeLists.txt  ContourTree.cpp  ContourTree.h  ContourTreeAlgorithm.h  ContourTreeBase.cpp  ContourTreeBase.h  ContourTree_TreeMerge.cpp  (+104 more)
TopologyFileParser/: CMakeLists.txt  TopoFileParserConfig.cmake  timos_tutorial.txt
(+141 files in other folders)
