FIND_PACKAGE(OpenGL)
FIND_PACKAGE(FLTK)
FIND_PACKAGE(Freetype)
FIND_PACKAGE(FTGL)


INCLUDE_DIRECTORIES(
   ${CMAKE_CURRENT_SOURCE_DIR}/../src
   ${FLTK_INCLUDE_DIR}
   ${FREETYPE_INCLUDE_DIRS}
   ${FTGL_INCLUDE_DIR}
   ${STATISTICS_SRC}
   ${TOPO_PARSER_INCLUDE_DIR}
)

SET(LINK_LIBRARIES
    Statistics
    ${TOPO_PARSER_LIBRARIES}
    ${OPENGL_LIBRARIES}
    ${FLTK_LIBRARIES}
    ${FREETYPE_LIBRARIES}
    ${FTGL_LIBRARIES}
)

#FLTK_WRAP_UI(plot plotViewerUI.fl)

SET (GUI_SRC    
    GUIDriver.cpp
    DisplayTools.cpp
    plotMain.cpp
    plotWindow.cpp
    plotViewerUI.cpp
)

SET(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} ${GUI_COMPILE_FLAGS})


ADD_EXECUTABLE(plot  ${GUI_SRC}) 
TARGET_LINK_LIBRARIES(plot ${LINK_LIBRARIES})

INSTALL(FILES viewerfile.txt flexgui.py Verdana.ttf
              DESTINATION ${PROJECT_EXE_DIR}/gui
)


INSTALL(TARGETS  plot 
        ARCHIVE DESTINATION ${PROJECT_LIBRARY_DIR}
        LIBRARY DESTINATION ${PROJECT_LIBRARY_DIR}
        RUNTIME DESTINATION ${PROJECT_EXE_DIR}/gui
)
